--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "element-china-area-data": "^5.0.2",
     "element-plus": "^2.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
